--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "framer-motion": "^12.23.12",
     "mongoose": "^8.18.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
